// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IaaS should match snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          IaaS Pipelines
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-searchable-dropdown-container"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                          fill="currentColor"
                        />
                      </g>
                      <defs>
                        <clippath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20.0003"
                            width="20"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </span>
                </span>
                <input
                  class="el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="developerId"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-loader-container"
        >
          <div
            class="el-loader"
          >
            <div
              class="el-loader-moving-bar"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        IaaS Pipelines
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                        fill="currentColor"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0"
                      >
                        <rect
                          fill="white"
                          height="20.0003"
                          width="20"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`IaaS should match snapshot with pipelines 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="el-page-container"
      >
        <h1
          class="el-title"
        >
          IaaS Pipelines
        </h1>
        <form>
          <div
            class="el-mb11 el-form-layout"
          >
            <div
              class="el-input-wrap"
            >
              <div
                class="el-searchable-dropdown-container"
              >
                <input
                  id="developer-search-box"
                  readonly=""
                  style="display: none;"
                  value=""
                />
                <span
                  class="el-searchable-dropdown-search-input-add-on el-input-add-on"
                >
                  <span
                    class="el-icon"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <g>
                        <path
                          d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                          fill="currentColor"
                        />
                      </g>
                      <defs>
                        <clippath
                          id="clip0"
                        >
                          <rect
                            fill="white"
                            height="20.0003"
                            width="20"
                          />
                        </clippath>
                      </defs>
                    </svg>
                  </span>
                </span>
                <input
                  class="el-searchable-dropdown-search-input el-input"
                  data-testid="search-input"
                  name="developerId"
                  placeholder="Search developer organisations"
                  value=""
                />
              </div>
            </div>
          </div>
        </form>
        <div
          class="el-mb11 el-table"
          data-has-call-to-action="true"
          data-has-expandable-action="false"
          data-num-columns-excl-action-col="3"
        >
          <div
            class="el-table-headers-row"
          >
            <div
              class="el-table-header"
            >
              Name
            </div>
            <div
              class="el-table-header"
            >
              Build Status
            </div>
            <div
              class="el-table-header"
            >
              Repository
            </div>
            <div
              class="el-table-header"
            >
              Delete Pipeline
            </div>
          </div>
          <div
            class="el-table-row-container"
          >
            <div
              class="el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
              >
                <span
                  class="el-intent-secondary el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 80 80"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M65 35.4285L38 26L11 35.4285L38 45L65 35.4285Z"
                      fill="#23A4DE"
                    />
                    <path
                      d="M65 35.4285L38 26V45L65 35.4285Z"
                      fill="#0061A8"
                    />
                    <path
                      d="M50.564 12.2517C49.9575 5.9453 44.676 1 38.2717 1C31.8676 1 26.5864 5.94539 25.9794 12.2517C21.8788 12.8404 18.7161 16.4077 18.7161 20.7066C18.7161 25.4157 22.5117 29.2468 27.177 29.2468C53.1412 29.2468 25.0325 29.2469 49.3663 29.2469C54.0317 29.2469 57.8272 25.4157 57.8272 20.7067C57.8272 16.4077 54.6644 12.8404 50.564 12.2517Z"
                      fill="#FFB71B"
                    />
                    <path
                      d="M30.6945 19.7756C30.751 19.9138 30.883 20.004 31.0294 20.004H35.0016L35.0016 29.247C37.0041 29.247 38.7786 29.247 41.5266 29.247L41.5266 20.004H45.514C45.6604 20.004 45.7924 19.9138 45.8489 19.7762C45.9048 19.638 45.8743 19.479 45.7706 19.3732L38.5389 11.973C38.4707 11.9035 38.3787 11.8643 38.2822 11.8643C38.1858 11.8643 38.0937 11.9035 38.0256 11.9722L30.7728 19.3725C30.6691 19.4783 30.638 19.6373 30.6945 19.7756Z"
                      fill="white"
                    />
                    <path
                      d="M41.5308 29.2468H35.0123C35.0274 31.0466 36.4834 32.5061 38.2715 32.5061C40.0598 32.5061 41.5158 31.0466 41.5308 29.2468Z"
                      fill="white"
                    />
                    <path
                      d="M38.2718 34.4135C35.4971 34.4135 33.233 32.1083 33.1608 29.2468H25.2346C25.2823 29.6934 25.3476 30.1374 25.4337 30.5757C25.5389 31.1109 25.9924 31.4954 26.5188 31.4954H28.5214C28.5794 31.6502 28.6407 31.8036 28.7055 31.9555L27.289 33.4253C26.9167 33.8115 26.858 34.4164 27.1486 34.872C27.6825 35.709 28.3013 36.4947 28.9882 37.2074C29.6758 37.9209 30.4331 38.5631 31.2392 39.1163C31.678 39.4178 32.2608 39.3566 32.6331 38.9704L34.0494 37.5008C34.1958 37.568 34.3437 37.6317 34.493 37.6918V39.7697C34.493 40.3159 34.8636 40.7866 35.3793 40.8957C36.3263 41.0959 37.2994 41.1974 38.2718 41.1974C39.2441 41.1974 40.2173 41.0959 41.1643 40.8957C41.6802 40.7866 42.0507 40.3159 42.0507 39.7697L42.0506 37.6918C42.1999 37.6317 42.3478 37.568 42.4942 37.5008L43.9102 38.9702C44.2824 39.3563 44.8651 39.4174 45.3041 39.1162C46.1099 38.5633 46.8673 37.9209 47.5553 37.2071C48.2429 36.4936 48.8617 35.7079 49.3948 34.8716C49.6853 34.4161 49.6265 33.8114 49.2543 33.4251L47.8381 31.9557C47.9029 31.8038 47.9643 31.6503 48.0223 31.4954H50.0244C50.5508 31.4954 51.0044 31.1109 51.1095 30.5756C51.1956 30.1373 51.261 29.6934 51.3087 29.2468H43.3829C43.3108 32.1083 41.0466 34.4135 38.2718 34.4135Z"
                      fill="white"
                    />
                    <path
                      d="M38 44.566L11 35V69.401L38 78V44.566Z"
                      fill="#31448F"
                    />
                    <path
                      d="M65 69.401V35L38 44.566V78L65 69.401Z"
                      fill="#262F69"
                    />
                    <path
                      d="M11.2576 35L2 46.0304L29.2457 56L38 44.4747L11.2576 35Z"
                      fill="#7BC9EB"
                    />
                    <path
                      d="M64.7401 35L74 46.0304L46.7566 56L38 44.4747L64.7401 35Z"
                      fill="#23A4DE"
                    />
                  </svg>
                </span>
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Name"
                >
                  reapit-ltd-internal-thoughtless-cub
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Build Status"
                >
                  <span
                    class="el-intent-critical el-status-indicator"
                  />
                  Pre Provisioned
                </div>
              </div>
              <div
                class="el-table-cell"
              >
                <div
                  class="el-table-cell-content"
                  data-narrow-label="Repository"
                />
              </div>
              <div
                class="el-table-cta-cell"
              >
                <div
                  class="el-table-cta-icon-container"
                >
                  <span
                    class="el-intent-primary el-icon"
                    style="font-size: 1.2rem;"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 20 20"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                        fill="currentColor"
                      />
                      <path
                        d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                        fill="currentColor"
                      />
                      <path
                        d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                        fill="currentColor"
                      />
                      <path
                        d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-pagination-wrap"
        >
          <div
            class="el-pagination-text"
          >
            <input
              class="el-pagination-input"
              value="1"
            />
             of 
            6
          </div>
          <button
            class="el-pagination-button"
            data-testid="back-button"
            type="button"
          >
            <span
              class="el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 6L9 0V12L0 6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
          <button
            class="el-pagination-button"
            data-testid="forward-button"
            type="button"
          >
            <span
              class="el-pagination-primary el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 12 12"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6L3 12V0L12 6Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </button>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="el-page-container"
    >
      <h1
        class="el-title"
      >
        IaaS Pipelines
      </h1>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-searchable-dropdown-container"
            >
              <input
                id="developer-search-box"
                readonly=""
                style="display: none;"
                value=""
              />
              <span
                class="el-searchable-dropdown-search-input-add-on el-input-add-on"
              >
                <span
                  class="el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g>
                      <path
                        d="M19.7556 18.5783L14.0682 12.8909C15.1699 11.5301 15.8332 9.80089 15.8332 7.91758C15.8332 3.55262 12.2815 0.000976562 7.91656 0.000976562C3.55161 0.000976562 0 3.55258 0 7.91754C0 12.2825 3.55165 15.8342 7.9166 15.8342C9.7999 15.8342 11.5291 15.1708 12.8899 14.0692L18.5773 19.7566C18.7398 19.9191 18.9531 20.0008 19.1665 20.0008C19.3798 20.0008 19.5932 19.9191 19.7557 19.7566C20.0815 19.4308 20.0815 18.9041 19.7556 18.5783ZM7.9166 14.1675C4.46996 14.1675 1.66666 11.3642 1.66666 7.91754C1.66666 4.4709 4.46996 1.6676 7.9166 1.6676C11.3632 1.6676 14.1665 4.4709 14.1665 7.91754C14.1665 11.3642 11.3632 14.1675 7.9166 14.1675Z"
                        fill="currentColor"
                      />
                    </g>
                    <defs>
                      <clippath
                        id="clip0"
                      >
                        <rect
                          fill="white"
                          height="20.0003"
                          width="20"
                        />
                      </clippath>
                    </defs>
                  </svg>
                </span>
              </span>
              <input
                class="el-searchable-dropdown-search-input el-input"
                data-testid="search-input"
                name="developerId"
                placeholder="Search developer organisations"
                value=""
              />
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="3"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Name
          </div>
          <div
            class="el-table-header"
          >
            Build Status
          </div>
          <div
            class="el-table-header"
          >
            Repository
          </div>
          <div
            class="el-table-header"
          >
            Delete Pipeline
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 80 80"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M65 35.4285L38 26L11 35.4285L38 45L65 35.4285Z"
                    fill="#23A4DE"
                  />
                  <path
                    d="M65 35.4285L38 26V45L65 35.4285Z"
                    fill="#0061A8"
                  />
                  <path
                    d="M50.564 12.2517C49.9575 5.9453 44.676 1 38.2717 1C31.8676 1 26.5864 5.94539 25.9794 12.2517C21.8788 12.8404 18.7161 16.4077 18.7161 20.7066C18.7161 25.4157 22.5117 29.2468 27.177 29.2468C53.1412 29.2468 25.0325 29.2469 49.3663 29.2469C54.0317 29.2469 57.8272 25.4157 57.8272 20.7067C57.8272 16.4077 54.6644 12.8404 50.564 12.2517Z"
                    fill="#FFB71B"
                  />
                  <path
                    d="M30.6945 19.7756C30.751 19.9138 30.883 20.004 31.0294 20.004H35.0016L35.0016 29.247C37.0041 29.247 38.7786 29.247 41.5266 29.247L41.5266 20.004H45.514C45.6604 20.004 45.7924 19.9138 45.8489 19.7762C45.9048 19.638 45.8743 19.479 45.7706 19.3732L38.5389 11.973C38.4707 11.9035 38.3787 11.8643 38.2822 11.8643C38.1858 11.8643 38.0937 11.9035 38.0256 11.9722L30.7728 19.3725C30.6691 19.4783 30.638 19.6373 30.6945 19.7756Z"
                    fill="white"
                  />
                  <path
                    d="M41.5308 29.2468H35.0123C35.0274 31.0466 36.4834 32.5061 38.2715 32.5061C40.0598 32.5061 41.5158 31.0466 41.5308 29.2468Z"
                    fill="white"
                  />
                  <path
                    d="M38.2718 34.4135C35.4971 34.4135 33.233 32.1083 33.1608 29.2468H25.2346C25.2823 29.6934 25.3476 30.1374 25.4337 30.5757C25.5389 31.1109 25.9924 31.4954 26.5188 31.4954H28.5214C28.5794 31.6502 28.6407 31.8036 28.7055 31.9555L27.289 33.4253C26.9167 33.8115 26.858 34.4164 27.1486 34.872C27.6825 35.709 28.3013 36.4947 28.9882 37.2074C29.6758 37.9209 30.4331 38.5631 31.2392 39.1163C31.678 39.4178 32.2608 39.3566 32.6331 38.9704L34.0494 37.5008C34.1958 37.568 34.3437 37.6317 34.493 37.6918V39.7697C34.493 40.3159 34.8636 40.7866 35.3793 40.8957C36.3263 41.0959 37.2994 41.1974 38.2718 41.1974C39.2441 41.1974 40.2173 41.0959 41.1643 40.8957C41.6802 40.7866 42.0507 40.3159 42.0507 39.7697L42.0506 37.6918C42.1999 37.6317 42.3478 37.568 42.4942 37.5008L43.9102 38.9702C44.2824 39.3563 44.8651 39.4174 45.3041 39.1162C46.1099 38.5633 46.8673 37.9209 47.5553 37.2071C48.2429 36.4936 48.8617 35.7079 49.3948 34.8716C49.6853 34.4161 49.6265 33.8114 49.2543 33.4251L47.8381 31.9557C47.9029 31.8038 47.9643 31.6503 48.0223 31.4954H50.0244C50.5508 31.4954 51.0044 31.1109 51.1095 30.5756C51.1956 30.1373 51.261 29.6934 51.3087 29.2468H43.3829C43.3108 32.1083 41.0466 34.4135 38.2718 34.4135Z"
                    fill="white"
                  />
                  <path
                    d="M38 44.566L11 35V69.401L38 78V44.566Z"
                    fill="#31448F"
                  />
                  <path
                    d="M65 69.401V35L38 44.566V78L65 69.401Z"
                    fill="#262F69"
                  />
                  <path
                    d="M11.2576 35L2 46.0304L29.2457 56L38 44.4747L11.2576 35Z"
                    fill="#7BC9EB"
                  />
                  <path
                    d="M64.7401 35L74 46.0304L46.7566 56L38 44.4747L64.7401 35Z"
                    fill="#23A4DE"
                  />
                </svg>
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Name"
              >
                reapit-ltd-internal-thoughtless-cub
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Build Status"
              >
                <span
                  class="el-intent-critical el-status-indicator"
                />
                Pre Provisioned
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Repository"
              />
            </div>
            <div
              class="el-table-cta-cell"
            >
              <div
                class="el-table-cta-icon-container"
              >
                <span
                  class="el-intent-primary el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 20 20"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5625 2.5H13.125V1.875C13.125 0.841133 12.2839 0 11.25 0H8.75C7.71613 0 6.875 0.841133 6.875 1.875V2.5H3.4375C2.57594 2.5 1.875 3.20094 1.875 4.0625V6.25C1.875 6.59516 2.15484 6.875 2.5 6.875H2.84156L3.38152 18.2142C3.42922 19.2156 4.25187 20 5.25437 20H14.7456C15.7482 20 16.5708 19.2156 16.6185 18.2142L17.1584 6.875H17.5C17.8452 6.875 18.125 6.59516 18.125 6.25V4.0625C18.125 3.20094 17.4241 2.5 16.5625 2.5ZM8.125 1.875C8.125 1.53039 8.40539 1.25 8.75 1.25H11.25C11.5946 1.25 11.875 1.53039 11.875 1.875V2.5H8.125V1.875ZM3.125 4.0625C3.125 3.8902 3.2652 3.75 3.4375 3.75H16.5625C16.7348 3.75 16.875 3.8902 16.875 4.0625V5.625C16.6824 5.625 3.92316 5.625 3.125 5.625V4.0625ZM15.3699 18.1547C15.354 18.4885 15.0798 18.75 14.7456 18.75H5.25437C4.9202 18.75 4.64598 18.4885 4.63012 18.1547L4.09297 6.875H15.907L15.3699 18.1547Z"
                      fill="currentColor"
                    />
                    <path
                      d="M10 17.5C10.3452 17.5 10.625 17.2202 10.625 16.875V8.75C10.625 8.40484 10.3452 8.125 10 8.125C9.65484 8.125 9.375 8.40484 9.375 8.75V16.875C9.375 17.2202 9.6548 17.5 10 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M13.125 17.5C13.4702 17.5 13.75 17.2202 13.75 16.875V8.75C13.75 8.40484 13.4702 8.125 13.125 8.125C12.7798 8.125 12.5 8.40484 12.5 8.75V16.875C12.5 17.2202 12.7798 17.5 13.125 17.5Z"
                      fill="currentColor"
                    />
                    <path
                      d="M6.875 17.5C7.22016 17.5 7.5 17.2202 7.5 16.875V8.75C7.5 8.40484 7.22016 8.125 6.875 8.125C6.52984 8.125 6.25 8.40484 6.25 8.75V16.875C6.25 17.2202 6.5298 17.5 6.875 17.5Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          6
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 6L9 0V12L0 6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-pagination-primary el-icon"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 6L3 12V0L12 6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
